--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "@vitejs/plugin-vue": "^4.5.0",
     "vite": "^5.0.0",
     "vue": "^3.3.8"
+  },
+  "dependencies": {
+    "vuedraggable": "^4.1.0"
   }
 }
